--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,62 @@
+########################################
+# SERVER SETTINGS
+########################################
+server.port=${PORT:8080}  
 server.error.include-message=always
 server.error.include-binding-errors=always
 
-server.port = 9300
-logging.level.org.springframework=DEBUG
+########################################
+# LOGGING
+########################################
+logging.level.org.springframework=INFO
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+########################################
+# MAIL SETTINGS
+########################################
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=hamimtaha58@gmail.com   
+spring.mail.username=hamimtaha58@gmail.com
 spring.mail.password=wrdg gred mqun gutz
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.debug=true
-security.jwt.expiration-minutes = 30
-security.jwt.secret-key = dGhpcyBpcyBteSBzZWN1cmUga2V5IGFuZCB5b3UgY2Fubm90IGhhY2sgaXQ=
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/doctorsina
-spring.datasource.username=postgres
-spring.datasource.password=admin123
+########################################
+# JWT SECURITY
+########################################
+security.jwt.expiration-minutes=30
+security.jwt.secret-key=dGhpcyBpcyBteSBzZWN1cmUga2V5IGFuZCB5b3UgY2Fubm90IGhhY2sgaXQ=
+
+########################################
+# DATABASE CONFIGURATION
+########################################
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+########################################
+# JPA / HIBERNATE
+########################################
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-spring.application.name = Email-Verification-BackendService
-spring.web.resources.static-locations=classpath:/static/
 spring.jpa.properties.hibernate.format_sql=true
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
+########################################
+# STATIC RESOURCES
+########################################
+spring.web.resources.static-locations=classpath:/static/
+
+########################################
+# ACTUATOR MONITORING
+########################################
 management.endpoints.web.exposure.include=health,info
 management.endpoint.health.show-details=always
+
+########################################
+# APPLICATION NAME
+########################################
+spring.application.name=Email-Verification-BackendService
