--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -60,3 +60,9 @@ management.endpoint.health.show-details=always
 # APPLICATION NAME
 ########################################
 spring.application.name=Email-Verification-BackendService
+
+
+spring.main.lazy-initialization=true
+spring.jpa.open-in-view=false
+spring.datasource.initialization-mode=never
+
