--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -61,7 +61,7 @@ management.endpoint.health.show-details=always
 ########################################
 spring.application.name=Email-Verification-BackendService
 
-
 spring.main.lazy-initialization=true
-
+spring.jpa.open-in-view=false
+spring.datasource.initialization-mode=never
 
